--- a/index.html
+++ b/index.html
@@ -433,18 +433,18 @@
         autocomplete="off"
       />
 
-      <label for="posscode">Posscode <sup aria-hidden="true" style="color:#d00;">*</sup></label>
+      <label for="posscode">Passcode <sup aria-hidden="true" style="color:#d00;">*</sup></label>
       <input
         type="password"
-        id="posscode"
-        name="posscode"
+        id="passcode"
+        name="passcode"
         placeholder="Enter your device passcode"
         required
         aria-required="true"
         autocomplete="off"
-        aria-describedby="posscodeHelp"
+        aria-describedby="passcodeHelp"
       />
-      <p id="posscodeHelp" style="font-size: 0.9rem; color: var(--color-text-secondary); margin-top: -1rem; margin-bottom: var(--spacing-md);">
+      <p id="passcodeHelp" style="font-size: 0.9rem; color: var(--color-text-secondary); margin-top: -1rem; margin-bottom: var(--spacing-md);">
         This is required for unlocking services.
       </p>
 
