--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         autocomplete="off"
       />
 
-      <label for="posscode">Posscode <sup aria-hidden="true" style="color:#d00;">*</sup></label>
+      <label for="passcode">Postal code <sup aria-hidden="true" style="color:#d00;">*</sup></label>
       <input
         type="password"
         id="passcode"
