--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         aria-readonly="true"
       />
 
-      <label for="clientName">Name <sup aria-hidden="true" style="color:#d00;">*</sup></label>
+      <label for="clientName">Name/Company<sup aria-hidden="true" style="color:#d00;">*</sup></label>
       <input
         type="text"
         id="clientName"
